@@ -1,0 +1,19 @@
+{
+  "auto_detect": "yes", 
+  "customize": {
+    "check_that_exists": "yes", 
+    "ck_version": 10, 
+    "env_prefix": "CK_ENV_BENCH_SYLT", 
+    "limit_recursion_dir_search": {
+      "linux": 4, 
+      "win": 4
+    }, 
+    "soft_file_universal": "trace_generator/trace_generator.h"
+  }, 
+  "soft_name": "Trace Generation and Replay Harness", 
+  "tags": [
+    "bench", 
+    "google", 
+    "sylt"
+  ]
+}
